--- a/index.html
+++ b/index.html
@@ -1,7 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Personal Blog</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>COMING SOON</h1>
-<p>Web Under Construction</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#posts">Blog Posts</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <h1>My Personal Blog</h1>
+    </header>
+
+    <main>
+        <section id="posts">
+            <h2>Recent Posts</h2>
+            <article>
+                <h3>First Blog Post</h3>
+                <p>This is my first blog post. I'm excited to share my thoughts and experiences here!</p>
+                <small>Posted on: October 1, 2023</small>
+            </article>
+        </section>
+
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hi, I'm a passionate learner and creator. This blog is where I share my thoughts and experiences.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>You can reach me at: email@example.com</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 My Personal Blog</p>
+    </footer>
 </body>
 </html>
