--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
             <article>
                 <h3>First Blog Post</h3>
                 <p>This is my first blog post. I'm excited to share my thoughts and experiences here!</p>
-                <small>Posted on: October 1, 2023</small>
+                <small>Posted on: February 1, 2025</small>
             </article>
         </section>
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi, I'm a passionate learner and creator. This blog is where I share my thoughts and experiences.</p>
+            <p>Hi, I'm Gary Andreas, a student of Informatics Engineering major. This blog is where I share my thoughts and stories.</p>
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at: email@example.com</p>
+            <p>You can reach me at: garyandreas0804@gmail.com</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 My Personal Blog</p>
+        <p>&copy; 2025 Gary Andreas</p>
     </footer>
 </body>
 </html>
