--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- Hero Section -->
             <section id="home" class="hero">
                 <div class="hero-content">
-                    <img src="profile.jpg" alt="Gary Andreas" class="profile-img">
+                    <img src="https://via.placeholder.com/180" alt="Gary Andreas" class="profile-img">
                     <h2>Hello, I'm Gary Andreas</h2>
                     <p>Student of Informatics Engineering. Welcome to my personal blog where I share my thoughts, projects, and experiences.</p>
                 </div>
