--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
 </head>
 <body>
 <header>
-    <button
-        class="hamburger"
-        id="hamburger"
-        aria-label="Toggle menu"
-        aria-expanded="false"
-        aria-controls="nav-menu"
-        type="button"
-    >
+    <button class="hamburger" id="hamburger" aria-label="Toggle menu" aria-expanded="false" aria-controls="nav-menu" type="button">
         <span></span>
         <span></span>
         <span></span>
