--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
 <header>
-    <button class="hamburger" id="hamburger" aria-label="Toggle menu" aria-expanded="false" aria-controls="nav-menu" type="button">
+    <button
+        class="hamburger"
+        id="hamburger"
+        aria-label="Toggle menu"
+        aria-expanded="false"
+        aria-controls="nav-menu"
+        type="button"
+    >
         <span></span>
         <span></span>
         <span></span>
@@ -106,20 +113,6 @@
 
         <section id="projects">
             <h2>Projects</h2>
-
-            <form id="projectForm">
-                <label for="projectTitle">Title:</label>
-                <input type="text" id="projectTitle" name="projectTitle" required />
-
-                <label for="projectDescription">Description:</label>
-                <textarea id="projectDescription" name="projectDescription" required></textarea>
-
-                <label for="projectLink">Link:</label>
-                <input type="url" id="projectLink" name="projectLink" placeholder="https://example.com" />
-
-                <button type="submit">Add Project</button>
-            </form>
-
             <div class="projects-container">
                 <div class="project-card">
                     <h3>Project One</h3>
