--- a/index.html
+++ b/index.html
@@ -115,12 +115,14 @@
             <h2>Projects</h2>
             <div class="projects-container">
                 <div class="project-card">
-                    <h3>Project One</h3>
-                    <p>A brief description of project one.</p>
-                </div>
-                <div class="project-card">
-                    <h3>Project Two</h3>
-                    <p>A brief description of project two.</p>
+                    <h3>UTS Sistem Multimedia</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <iframe 
+                        src="UTS/LAPORAN UTS SISTEM MULTIMEDIA.pdf"
+                        class="pdf-viewer"
+                        title="UTS Sistem Multimedia PDF"
+                    ></iframe>
+                    <a href="UTS/LAPORAN UTS SISTEM MULTIMEDIA.pdf" class="project-link" download>Download PDF</a>
                 </div>
             </div>
         </section>
