--- a/index.html
+++ b/index.html
@@ -94,61 +94,61 @@
                     
                     <div class="font-sample roboto">
                         <h4>Roboto</h4>
-                        <img src="Posts/font-previews/roboto.jpg" alt="Roboto Font Preview" class="font-preview">
+                        <img src="font/roboto.jpg" alt="Roboto Font Preview" class="font-preview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elegant and modern sans-serif font.</p>
                     </div>
 
                     <div class="font-sample opensans">
                         <h4>Open Sans</h4>
-                        <img src="Posts/font-previews/opensans.jpg" alt="Open Sans Font Preview" class="font-preview">
+                        <img src="font/opensans.jpg" alt="Open Sans Font Preview" class="font-preview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Friendly and versatile typeface.</p>
                     </div>
 
                     <div class="font-sample lato">
                         <h4>Lato</h4>
-                        <img src="Posts/font-previews/lato.jpg" alt="Lato Font Preview" class="font-preview">
+                        <img src="font/lato.jpg" alt="Lato Font Preview" class="font-preview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Clean and balanced design.</p>
                     </div>
 
                     <div class="font-sample montserrat">
                         <h4>Montserrat</h4>
-                        <img src="Posts/font-previews/montserrat.jpg" alt="Montserrat Font Preview" class="font-preview">
+                        <img src="font/montserrat.jpg" alt="Montserrat Font Preview" class="font-preview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urban-inspired typeface.</p>
                     </div>
 
                     <div class="font-sample raleway">
                         <h4>Raleway</h4>
-                        <img src="Posts/font-previews/raleway.jpg" alt="Raleway Font Preview" class="font-preview">
+                        <img src="font/raleway.jpg" alt="Raleway Font Preview" class="font-preview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elegant display font.</p>
                     </div>
 
                     <div class="font-sample merriweather">
                         <h4>Merriweather</h4>
-                        <img src="Posts/font-previews/merriweather.jpg" alt="Merriweather Font Preview" class="font-preview">
+                        <img src="font/merriweather.jpg" alt="Merriweather Font Preview" class="font-preview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Classic serif design.</p>
                     </div>
 
                     <div class="font-sample ptsans">
                         <h4>PT Sans</h4>
-                        <img src="Posts/font-previews/ptsans.jpg" alt="PT Sans Font Preview" class="font-preview">
+                        <img src="font/ptsans.jpg" alt="PT Sans Font Preview" class="font-preview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Universal and readable.</p>
                     </div>
 
                     <div class="font-sample sourcesanspro">
                         <h4>Source Sans Pro</h4>
-                        <img src="Posts/font-previews/sourcesanspro.jpg" alt="Source Sans Pro Font Preview" class="font-preview">
+                        <img src="font/sourcesanspro.jpg" alt="Source Sans Pro Font Preview" class="font-preview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Adobe's first open source font.</p>
                     </div>
 
                     <div class="font-sample oswald">
                         <h4>Oswald</h4>
-                        <img src="Posts/font-previews/oswald.jpg" alt="Oswald Font Preview" class="font-preview">
+                        <img src="font/oswald.jpg" alt="Oswald Font Preview" class="font-preview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condensed and bold.</p>
                     </div>
 
                     <div class="font-sample ubuntu">
                         <h4>Ubuntu</h4>
-                        <img src="Posts/font-previews/ubuntu.jpg" alt="Ubuntu Font Preview" class="font-preview">
+                        <img src="font/ubuntu.jpg" alt="Ubuntu Font Preview" class="font-preview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Modern humanist style.</p>
                     </div>
 
