--- a/index.html
+++ b/index.html
@@ -234,6 +234,13 @@
     <p>&copy; 2025 Gary Andreas</p>
 </footer>
 
+<div class="modal" id="imageModal">
+    <button class="modal-close" id="modalClose">&times;</button>
+    <div class="modal-content">
+        <img id="modalImage" src="" alt="Font Preview">
+    </div>
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
