--- a/index.html
+++ b/index.html
@@ -165,61 +165,61 @@
                         <div class="font-sample jpeg2000">
                             <h4>JPEG 2000</h4>
                             <img src="Images/jpeg.jpg" alt="JPEG 2000 Sample" class="font-preview">
-                            <p>Advanced image compression format with superior quality and scalability features. <a href="Images/sample.jp2" class="format-link">View JP2 file</a></p>
+                            <p>Advanced image compression format with superior quality and scalability features. <a href="Images/jpeg.jpg" class="format-link">View JPEG file</a></p>
                         </div>
 
                         <div class="font-sample eps">
                             <h4>EPS Format</h4>
                             <img src="Images/jpeg.jpg" alt="EPS Sample" class="font-preview">
-                            <p>Vector-based format widely used in professional printing and graphic design. <a href="Images/sample.eps" class="format-link">View EPS file</a></p>
+                            <p>Vector-based format widely used in professional printing and graphic design. <a href="Images/eps.eps" class="format-link">View EPS file</a></p>
                         </div>
 
                         <div class="font-sample psd">
                             <h4>PSD Format</h4>
                             <img src="Images/jpeg.jpg" alt="PSD Sample" class="font-preview">
-                            <p>Adobe's native format supporting layers, masks, and advanced editing features. <a href="Images/sample.psd" class="format-link">View PSD file</a></p>
+                            <p>Adobe's native format supporting layers, masks, and advanced editing features. <a href="Images/psd.psd" class="format-link">View PSD file</a></p>
                         </div>
 
                         <div class="font-sample cr2">
                             <h4>CR2 Format</h4>
                             <img src="Images/jpeg.jpg" alt="CR2 Sample" class="font-preview">
-                            <p>Canon's proprietary RAW format preserving maximum image data from sensors. <a href="Images/sample.cr2" class="format-link">View CR2 file</a></p>
+                            <p>Canon's proprietary RAW format preserving maximum image data from sensors. <a href="Images/cr2.cr2" class="format-link">View CR2 file</a></p>
                         </div>
 
                         <div class="font-sample nef">
                             <h4>NEF Format</h4>
                             <img src="Images/jpeg.jpg" alt="NEF Sample" class="font-preview">
-                            <p>Nikon's RAW format offering comprehensive image data and editing flexibility. <a href="Images/sample.cr2" class="format-link">View CR2 file</a></p>
+                            <p>Nikon's RAW format offering comprehensive image data and editing flexibility. <a href="Images/nef.nef" class="format-link">View NEF file</a></p>
                         </div>
 
                         <div class="font-sample orf">
                             <h4>ORF Format</h4>
                             <img src="Images/jpeg.jpg" alt="ORF Sample" class="font-preview">
-                            <p>Olympus RAW format delivering high-quality uncompressed image data. <a href="Images/sample.cr2" class="format-link">View CR2 file</a></p>
+                            <p>Olympus RAW format delivering high-quality uncompressed image data. <a href="Images/orf.orf" class="format-link">View ORF file</a></p>
                         </div>
 
                         <div class="font-sample dng">
                             <h4>DNG Format</h4>
                             <img src="Images/jpeg.jpg" alt="DNG Sample" class="font-preview">
-                            <p>Adobe's universal RAW format ensuring long-term compatibility and preservation. <a href="Images/sample.cr2" class="format-link">View CR2 file</a></p>
+                            <p>Adobe's universal RAW format ensuring long-term compatibility and preservation. <a href="Images/dng.dng" class="format-link">View DNG file</a></p>
                         </div>
 
                         <div class="font-sample pcx">
                             <h4>PCX Format</h4>
                             <img src="Images/jpeg.jpg" alt="PCX Sample" class="font-preview">
-                            <p>Classic image format known for its early adoption in PC graphics. <a href="Images/sample.cr2" class="format-link">View CR2 file</a></p>
+                            <p>Classic image format known for its early adoption in PC graphics. <a href="Images/pcx.pcx" class="format-link">View PCX file</a></p>
                         </div>
 
                         <div class="font-sample openexr">
                             <h4>OpenEXR</h4>
                             <img src="Images/jpeg.jpg" alt="OpenEXR Sample" class="font-preview">
-                            <p>High dynamic range imaging format used in professional visual effects. <a href="Images/sample.cr2" class="format-link">View CR2 file</a></p>
+                            <p>High dynamic range imaging format used in professional visual effects. <a href="Images/exr.exr" class="format-link">View OPEN EXR file</a></p>
                         </div>
 
                         <div class="font-sample hdr">
                             <h4>Radiance HDR</h4>
                             <img src="Images/jpeg.jpg" alt="Radiance HDR Sample" class="font-preview">
-                            <p>Scientific visualization format supporting high dynamic range imaging. <a href="Images/sample.cr2" class="format-link">View CR2 file</a></p>
+                            <p>Scientific visualization format supporting high dynamic range imaging. <a href="Images/hdr.hdr" class="format-link">View HDR file</a></p>
                         </div>
                     </div>
 
